Fix issue with scrollbars on logos

--- a/marinerescue-frontend/src/components/Footer.scss
+++ b/marinerescue-frontend/src/components/Footer.scss
@@ -19,6 +19,10 @@ footer {
         display: none;
     }
 
+    .column-navbar-logo {
+        overflow: visible;
+    }
+
     .navbar-logo {
         display: none;
     }
