--- a/marinerescue-frontend/src/components/NavBar.scss
+++ b/marinerescue-frontend/src/components/NavBar.scss
@@ -17,6 +17,10 @@
     display: none;
 }
 
+.navbar a {
+    overflow: visible;
+}
+
 .navbar-logo{ 
     margin-bottom: -5px;
 
